Check for anonymous user when people aren't loggedin

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,7 @@
 
   <h1>Home Page</h1>
 
-  {% if user is None %}
+  {% if user.is_anonymous() %}
 
   <p>Hello, world!</p>
   <p>Not yet a user?</p>
